--- a/oi_smereko.html
+++ b/oi_smereko.html
@@ -15,6 +15,9 @@ p{
 </style>
 </head>
 <body>
+<hr align="center" width="525px" size="10px" color="white">
+<hr align="center" width="365px" size="10px" color="white">
+<hr align="center" width="200px" size="10px" color="white">
 <h1 align="center">Ой,смереко</h1>
 <h6 align="center"><p><br>На краю села хатина
 <br><br>
@@ -89,5 +92,14 @@ p{
 Чом до тебе так далеко
 <br><br>
 Чарівна моя смереко</p></h6>
+<hr align="center" width="525px" size="10px" color="white">
+<hr align="center" width="365px" size="10px" color="white">
+<hr align="center" width="200px" size="10px" color="white">
+<ul>
+<li>Автор:Злата Буценко</li>
+<li>Виконавець:Микола Гнатюк</li>
+</ul>
+
+
 </body>
 </html>
